mobile.scss
$primary-color: #55DEF1;
$primary-color-alt: #73DEEC;
$secondary-color: #c73421;
$secondary-color-alt: #E56554;

@media (max-width: 900px) {

  * {
    overflow-x: hidden;
  }

  nav {
    justify-content: flex-start;
    background: none !important;
    overflow:visible;
    height:10vh;
    .logo {
      display: none;
    }

    ul {
      transition: all 0.5s;
      z-index: 5;
      align-items: center;
      transform: translateX(100%);
      flex-direction: column;
      position: absolute;
      top: 0;
      right: 0;
      width: 40%;
      background: #15191C;

 

      li {
        padding: 2rem;
        i {
          color: white;
          padding-bottom: 2rem;
          font-size: 2rem;
        }
        a {
          font-size: 1.2rem;
          text-align: center;
          padding: 0 0.7rem;

          &::before {
            border-left: 0px solid $primary-color;
            border-top: 0px solid $primary-color;

          }
        }
      }
    }

    .burger {
    overflow:visible;

display:flex;
      color: white;

      div {
        transition: all 0.5s ease-in-out;
      }
    }
  }

  .book {
    font-size: 1.2rem;
  }

  .active {
    transform: translateX(0%);
  }

  .toggle {
    .line-1 {
      transform: rotate(-45deg) translate(-7px, 8px);
    }

    .line-2 {
      opacity: 0;
    }

    .line-3 {
      transform: rotate(45deg) translate(-5px, -7px);
    }
  }

  #showcase {
    .showcase-content {
      h1 {
        font-size: 2rem;
      }
    }
  }

  #youtube {
    h1 {
      font-size: 1.2rem;
    }
  }

  #offer {
    .container {
      padding: 0 1rem;
      width: 100%;

      .items {
        flex-direction: column;
      }
    }
  }

  #partners {
    .partners-container {
      flex-direction: column;
    }
  }

  #stats {
    padding: 2rem 0.25rem;

    .container {
      margin: 0;
      padding: 0;
      flex-direction: column;
      align-items: center;
      min-width: 350px;

      .thecard {
        width: 100%;
        margin: 1rem 0;

        &:hover {
          transform: rotateY(360deg) !important;
        }
      }
    }
  }

  #contact {
    form {
      padding: 1rem;

      .inputs {
        width: 100%;
      }

      textarea {
        width: 100%;
      }
    }
  }
}

